@@ -16,7 +16,7 @@ Devise.setup do |config|
   # config.remember_for = 2.weeks
 
   # Configure the e-mail address which will be shown in DeviseMailer.
-  # config.mail_sender = "foo.bar@yourapp.com"
+  # config.mailer_sender = "foo.bar@yourapp.com"
 
   # If you want to use other strategies, that are not (yet) supported by Devise,
   # you can configure them inside the config.warden block. The example below
